2004-12-09 Derek Price <derek@ximbiot.com>

	* sanity.sh (modules7): New test group.
	(Based on a patch from Mark D. Baushke <mdb@cvshome.org>, based on a
	report from Richard Verhoeven <Richard_Verhoeven@WestLB.de>.)

2004-12-09  Derek Price  <derek@ximbiot.com>

	* client.c (start_server): Avoid advertising the Redirect response when
	the user asked us not to.
	* root.h (cvsroot_t): Add redirect field.
	* root.c (new_cvsroot_t): Init redirect field.
	(parse_cvsroot_t): Parse Redirect method option.
	* server.c (serve_command_prep): Don't throw proxy_log away when
	Redirect isn't supported and it might be needed later.
	* sanity.sh (parseroot): Improve comment, add a few new tests.
	(writeproxy-ssh): Specify Redirect=yes explicitly.
	(writeproxy-ssh-noredirect): New test group.

2004-12-09  Mark D. Baushke  <mdb@cvshome.org>

	* main.c (usg): Remove Dr. Pascal Molli's CVS URL from the
	documentation.

2004-12-08  Derek Price  <derek@ximbiot.com>

	* root.c (Name_Root): s/TRACE_FUNCTION/TRACE_FLOW/.

2004-12-08  Derek Price  <derek@ximbiot.com>

	* root.c (parse_cvsroot): Suppress -Wall warning.

2004-12-08  Derek Price  <derek@ximbiot.com>

	* root.c (parse_cvsroot): findnode() compares LIST to NULL w/o help.

2004-12-08  Derek Price  <derek@ximbiot.com>

	* root.c (Name_root), server.c (serve_referrer): Don't free cvsroot_t.
	* server.sh (reposmv): Reaccount for multiple potential warnings and
	comment.

2004-12-07  Derek Price  <derek@ximbiot.com>

	* root.c (parse_cvsroot): Cache parsed values for efficiency and to
	avoid printing warnings about non-fatal parsing errors multiple times.
	* client.c,, login.c, main.c, recurse.c: Don't dispose of parsed roots,
	parse_cvsroot() has control.
	* sanity.sh (reposmv): Stop accounting for multiple warnings.

2004-12-03  Mark D. Baushke  <mdb@cvshome.org>

	* root.h (cvsroot_t): Add cvs_rsh and cvs_server for bookkeeping
	purposes.
	* root.c (new_cvsroot_t, free_cvsroot_t): Add support for case