@@ -1,5 +1,10 @@
 2004-12-09 Derek Price <derek@ximbiot.com>
 
+	* log-buffer.c (buf_count_mem): Compile this for PROXY_SUPPORT.
+	(Report from Brad L. Chisholm <blc@bsdwins.com>.)
+
+2004-12-09 Derek Price <derek@ximbiot.com>
+
 	* sanity.sh (modules7): New test group.
 	(Based on a patch from Mark D. Baushke <mdb@cvshome.org>, based on a
 	report from Richard Verhoeven <Richard_Verhoeven@WestLB.de>.)
